--- a/android/src/main/res/layout/main.xml
+++ b/android/src/main/res/layout/main.xml
@@ -3,9 +3,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
-  <ListView
-      android:id="@+id/device_list"
-      android:orientation="vertical"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"/>
+  <WebView android:id="@+id/webView" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
 </FrameLayout>
